--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
   "dependencies": {
     "chai": "3.5.0",
     "chalk": "1.1.3",
-    "chromedriver": "^2.41.0",
+    "chromedriver": "2.42.0",
     "commander": "2.9.0",
     "cucumber": "1.3.3",
-    "cucumber-html-reporter": "2.0.3",
+    "cucumber-html-reporter": "4.0.4",
     "cucumber-junit": "1.6.0",
     "electron": "^1.7.6",
     "electron-chromedriver": "^1.7.1",
